[PE] Fix DCHECK failuer when printing composited position:fixed

Bug: 848730
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: If75ff284081bc6699abbadba9437d095b97dc418
Reviewed-on: https://chromium-review.googlesource.com/1082931
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563837}
Former-commit-id: bb0342e88e7e4e142b6c75caf729d4b20e6db4a0